<resources>
    <string name="app_name">Task_SQB</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="no_contacts">No Contacts</string>
    <string name="name">name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="_912345678">912345678</string>
    <string name="full_name">full name</string>
    <string name="contacts_name">Contacts name</string>
    <string name="_99899_645_26_11">+99899-645-26-11</string>
    <string name="menu_button">Menu button</string>
</resources>